Continue migrate to .net 7.0, fix planning loading, fix day count to skip not displayed

--- a/MotivatorPlanning/MotivatorEngine.csproj
+++ b/MotivatorPlanning/MotivatorEngine.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MotivatorPluginCore\MotivatorPluginCore\MotivatorPluginCore.csproj" />
+    <ProjectReference Include="..\..\MotivatorPluginCore\MotivatorPluginCore\MotivatorCore.csproj" />
   </ItemGroup>
 
 </Project>
